src/styles/global.css
/*
  Place global styles here.
 */

@import '@fontsource-variable/raleway/wght-italic.css';
@import "@fontsource-variable/raleway";
@import '@fontsource/metrophobic';

/* The integration's default injected base.css file */
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
	@apply box-border;
}

html {
	scrollbar-gutter: stable;
}

body {
	@apply font-body bg-base-100 text-primary;
}

h1 {
	@apply font-heading text-4xl font-bold;
}

h2 {
	@apply font-heading text-3xl font-light text-secondary;
	/* @apply sticky top-14 z-30; */
}

h3 {
	@apply font-heading text-2xl font-medium;
}

h4 {
	@apply font-heading text-xl font-bold;
}

h5 {
	@apply font-heading text-lg font-bold;
}

nav {
	@apply font-heading;
}

button {
	@apply btn;
}

.btn {
	@apply btn-ghost text-primary text-base font-normal rounded;
}

.btn:hover {
	@apply bg-primary dark:bg-base-100 border-base-100 dark:border-primary text-base-100 dark:text-primary transform transition duration-300 ease-in-out scale-105;
}

.btn-active {
	@apply !bg-primary !text-base-100;
}

.btn-outline {
	@apply border-primary;
}

#toc-static {
	@apply px-0 sm:px-10;
}

